--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -186,3 +186,26 @@ footer nav ul {
 	margin: 2em
 }
 
+.filters {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin: 30px 0 50px;
+}
+
+.filters button {
+  border: 1px solid #1D6154;
+  color: #1D6154;
+  background: transparent;
+  padding: 10px 25px;        
+  border-radius: 60px;       
+  font-size: 16px;
+  font-weight: 500;          
+  cursor: pointer;
+  transition: all 0.2s ease; 
+}
+
+.filters button.active {
+  background-color: #1D6154;
+  color: white;
+}
