--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -270,7 +270,48 @@ footer nav ul {
 	font-weight: bold;
 }
 
-.error-message {
-	color: red;
-  	padding-bottom: 10px;
+.p_erreur {
+
+}
+
+/* Bandeau édition */
+.edit-banner {
+	display: none;
+	background-color: black;
+	color: white;
+	height: 59px;
+	align-items: center;
+	justify-content: center;
+	gap: 10px;
+}
+
+/* Bouton modifier */
+.edit-projects {
+	display: none;
+	justify-content: center;
+	gap: 30px;
+	align-items: center;
+	align-items: baseline;
+	padding: 70px;
+}
+
+.edit-projects button {
+	background: none;
+	border: none;
+	cursor: pointer;
+	font-size: 14px;
+	font-family: 'Work Sans';
+}
+
+.white_icon {
+	color: white;
+	width: 15.58px;
+  	height: 15.58px;
+}
+
+.black_icon {
+	color: black;
+	width: 15.58px;
+  	height: 15.58px;
+	margin-right: -30px;
 }
