--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -270,9 +270,7 @@ footer nav ul {
 	font-weight: bold;
 }
 
-.p_erreur {
 
-}
 
 /* Bandeau édition */
 .edit-banner {
@@ -288,7 +286,6 @@ footer nav ul {
 /* Bouton modifier */
 .edit-projects {
 	display: none;
-	justify-content: center;
 	gap: 30px;
 	align-items: center;
 	align-items: baseline;
@@ -314,4 +311,10 @@ footer nav ul {
 	width: 15.58px;
   	height: 15.58px;
 	margin-right: -30px;
+}
+
+.portfolio-header {
+   	display: flex;
+    align-items: baseline;
+    justify-content: center;
 }
