--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -445,12 +445,26 @@ footer nav ul {
 .upload-zone {
   background-color: #e8f1f6;
   border-radius: 3px;
-  height: 170px;
+  height: 190px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 40px;
+  overflow: hidden;
+  position: relative;
+}
+
+.upload-placeholder {
+  display: flex;
+  flex-direction: column;   
+  align-items: center;
+  gap: 10px;
+}
+
+.upload-zone img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .upload-zone i {
@@ -474,6 +488,10 @@ footer nav ul {
   font-size: 10px;
   color: #444;
   margin-top: 7px;
+}
+
+#add-photo-form {
+  margin-top: 40px;
 }
 
 /* ===== INPUTS ===== */
@@ -541,6 +559,34 @@ footer nav ul {
   background-color: #a7a7a7;
   color: white;
   font-weight: 700;
-  cursor: not-allowed;
+  cursor: pointer;
   font-size: 17px;
+}
+
+.preview-container {
+  display: none;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.preview-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.remove-preview {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: black;
+  color: white;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
