--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -136,12 +136,13 @@ li:hover {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+	grid-row-gap: 35px;
 }
 
 .gallery img {
 	width: 100%;
-
+  height: 100%;
+  object-fit: cover;
 }
 #contact {
 	width: 50%;
